--- a/TestTask/TestTask.csproj
+++ b/TestTask/TestTask.csproj
@@ -95,5 +95,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="77a8d552e2b48c1876cede11a7d89c95.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="947886.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
